// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render radio checked 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  width: calc(12px + 2 * (6px + 1px));
  height: calc(12px + 2 * (6px + 1px));
  border-radius: 50%;
  padding: 6px;
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  transition: box-shadow 0.3s ease-in-out;
}

.c2 {
  box-sizing: border-box;
  width: 12px;
  height: 12px;
  transform: scale(1);
  border-radius: 50%;
  transition: transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  background-color: var(--pbl-theme-colors-brand-main);
}

<div>
  <div
    alignitems="center"
    class="c0"
    role="radio"
  >
    <div
      class="c1"
      data-testid="pbl-radio"
    >
      <div
        class="c2"
        data-testid="pbl-radio-handle"
      />
      <input
        checked=""
        class="c3"
        data-testid="pbl-radio-input"
        id="custom-id"
        type="radio"
      />
    </div>
  </div>
</div>
`;

exports[`Render radio unchecked 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  width: calc(12px + 2 * (6px + 1px));
  height: calc(12px + 2 * (6px + 1px));
  border-radius: 50%;
  padding: 6px;
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  transition: box-shadow 0.3s ease-in-out;
}

.c2 {
  box-sizing: border-box;
  width: 12px;
  height: 12px;
  transform: scale(0);
  border-radius: 50%;
  transition: transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  background-color: var(--pbl-theme-colors-brand-main);
}

<div>
  <div
    alignitems="center"
    class="c0"
    role="radio"
  >
    <div
      class="c1"
      data-testid="pbl-radio"
    >
      <div
        class="c2"
        data-testid="pbl-radio-handle"
      />
      <input
        class="c3"
        data-testid="pbl-radio-input"
        id="custom-id"
        type="radio"
      />
    </div>
  </div>
</div>
`;

exports[`Render radio with label 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: var(--pbl-theme-typography-subtitle-marginBottom);
  margin-left: 8px;
  margin-bottom: 0;
}

<label
  class="c0"
  customstyles="[object Object]"
  data-testid="pbl-radio-label"
  for="custom-id"
  mb="0"
  ml="4"
>
  I am a 
  <strong>
    label
  </strong>
</label>
`;
